remotemonitoring/scripts/individual/auth.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth-pod
        image: azureiotpcs/pcs-auth-dotnet:1.0.0-preview.4
        ports:
        - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  labels:
    app: auth
spec:
  type: NodePort
  ports:
  - port: 9001
  selector:
    app: auth
