remotemonitoring/scripts/individual/device-simulation.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: device-simulation
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: device-simulation
    spec:
      containers:
      - name: device-simulation-pod
        image: azureiotpcs/device-simulation-dotnet:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9003
---
apiVersion: v1
kind: Service
metadata:
  name: device-simulation-svc
  labels:
    app: device-simulation
spec:
  type: NodePort
  ports:
  - port: 9003
  selector:
    app: device-simulation
