remotemonitoring/scripts/individual/device-telemetry.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: telemetry
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: telemetry
    spec:
      containers:
      - name: telemetry-pod
        image: azureiotpcs/telemetry-dotnet:1.0.0-preview.2
        ports:
        - containerPort: 9004
---
apiVersion: v1
kind: Service
metadata:
  name: telemetry-svc
  labels:
    app: telemetry
spec:
  type: NodePort
  ports:
  - port: 9004
  selector:
    app: telemetry
