remotemonitoring/scripts/individual/iothub-manager.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: iothub-manager
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: iothub-manager
    spec:
      containers:
      - name: iothub-manager-pod
        image: azureiotpcs/iothub-manager-dotnet:testing
        ports:
        - containerPort: 9002
---
apiVersion: v1
kind: Service
metadata:
  name: iothub-manager-svc
  labels:
    app: iothub-manager
spec:
  type: NodePort
  ports:
  - port: 9002
  selector:
    app: iothub-manager
