remotemonitoring/scripts/individual/storage-adapter.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: storage-adapter
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: storage-adapter
    spec:
      containers:
      - name: storage-adapter-pod
        image: azureiotpcs/storage-adapter-dotnet:latest
        ports:
        - containerPort: 9022
---
apiVersion: v1
kind: Service
metadata:
  name: storage-adapter-svc
  labels:
    app: storage-adapter
spec:
  type: NodePort
  ports:
  - port: 9022
  selector:
    app: storage-adapter
