remotemonitoring/scripts/individual/stream-analytics.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stream-analytics
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: stream-analytics
    spec:
      containers:
      - name: stream-analytics-pod
        image: azureiotpcs/iot-stream-analytics-java:latest
        ports:
        - containerPort: 9023
---
apiVersion: v1
kind: Service
metadata:
  name: stream-analytics-svc
  labels:
    app: stream-analytics
spec:
  type: NodePort
  ports:
  - port: 9023
  selector:
    app: stream-analytics
