remotemonitoring/scripts/individual/ui-config.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: config
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: config
    spec:
      containers:
      - name: config-pod
        image: azureiotpcs/pcs-config-dotnet:testing
        ports:
        - containerPort: 9005
---
apiVersion: v1
kind: Service
metadata:
  name: config-svc
  labels:
    app: config
spec:
  type: NodePort
  ports:
  - port: 9005
  selector:
    app: config
