remotemonitoring/scripts/individual/uiconfig.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: uiconfig
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: uiconfig
    spec:
      containers:
      - name: uiconfig-pod
        image: azureiotpcs/pcs-ui-config-dotnet:latest
        ports:
        - containerPort: 9005
---
apiVersion: v1
kind: Service
metadata:
  name: uiconfig-svc
  labels:
    app: uiconfig
spec:
  type: NodePort
  ports:
  - port: 9005
  selector:
    app: uiconfig
