remotemonitoring/scripts/individual/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: remotemonitoring
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    # ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "pcs-rm-v2.westus.cloudapp.azure.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: remote-monitoring-webui-svc
          servicePort: 9000
      - path: /iothubmanager
        backend:
          serviceName: iothub-manager-svc
          servicePort: 9002
      - path: /devicesimulation
        backend:
          serviceName: device-simulation-svc
          servicePort: 9003
      - path: /devicetelemetry
        backend:
          serviceName: device-telemetry-svc
          servicePort: 9004
      - path: /uiconfig
        backend:
          serviceName: uiconfig-svc
          servicePort: 9005
